--- a/portfolio/mysite/templates/mysite/about.html
+++ b/portfolio/mysite/templates/mysite/about.html
@@ -349,7 +349,6 @@ font-size: 150%;
 <section class="nav-bar">
     <div class="nav-container">
         <div class="brand">
-            <a href="https://webdevtrick.com/"><img src="https://webdevtrick.com/wp-content/uploads/logo-fb-1.png"></a>
         </div>
         <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -415,7 +414,8 @@ new WOW().init();
             <div class="col-md-5 text-muted">
                 <h1>A little bit more about me..</h1>
                 <p>Electrical Engineer who transitioned from Agricultural Science.
-                    I am presently a STEM instructor at TechBridge consulting limited .
+                    I am presently a STEM instructor at TechBridge consulting limited.
+                    Skilled in Microsoft Word, Excel, Control Systems Engineering, MATLAB, Python and Javascript.
                 </p>
                 <p>In 2012 I started pursuing a degree in B.Agriculture but my love for Engineering was too great to leave me behind.
                     I decided with my parents approval to go with what I love best which is Electrical Engineering.This comes due to
@@ -440,13 +440,13 @@ new WOW().init();
     <div class="footer">
         <br>
         <div class="container2 mt-5 text-center">
+            <h1>Get in touch</h1>
+            <p>ukturajo@gmail.com</p>
             <ul1>
-                <li1><a href="https://facebook.com/husnah.auwal.549"><i class="fa fa-facebook"></i></a></li1>
-                <li1><a href="https://instagram.com/husnah_auwal"><i class="fa fa-instagram"></i></a></li1>
-                <li1><a href="https://twitter.com/AuwalHusnah"><i class="fa fa-twitter"></i></a></li1>
-                <li1><a href="https://github.com/in/husna-auwal-6a32a31ab"><i class="fa fa-github"></i></a></li1>
+                <li1><a href="https://linkedin.com/in/usman-turajo-07511419a"><i class="fa fa-linkedin"></i></a></li1>
+                <li1><a href="https://github.com/uthman399"><i class="fa fa-github"></i></a></li1>
             </ul1>
-        </div>
+</div>
         <p>Copyright @ 2020</p>
         <br>
     </div>
