--- a/portfolio/mysite/templates/mysite/resume.html
+++ b/portfolio/mysite/templates/mysite/resume.html
@@ -348,7 +348,6 @@ li1 {
   <section class="nav-bar">
   <div class="nav-container">
     <div class="brand">
-      <a href="https://webdevtrick.com/"><img src="https://webdevtrick.com/wp-content/uploads/logo-fb-1.png"></a>
     </div>
     <nav>
       <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -369,7 +368,7 @@ li1 {
                             <a href="/web">Web Development Projects</a>
                         </li>
                         <li>
-                            <a href="#">Proteus projects</a>
+                            <a href="/proteus">Proteus projects</a>
                         </li>
                     </ul>
                 </li>
@@ -411,5 +410,5 @@ new WOW().init();
 
 
 <div class="container-fluid bg-light">
-    <iframe src="{% static 'mysite/pdf/rem.pdf' %}"   width="100%" height="700"></iframe>
-
+    <iframe src="{% static 'mysite/pdf/remyy.pdf' %}"   width="100%" height="400"></iframe>
+</div>
