--- a/portfolio/mysite/templates/mysite/web.html
+++ b/portfolio/mysite/templates/mysite/web.html
@@ -415,7 +415,6 @@ li1 {
   <section class="nav-bar">
   <div class="nav-container">
     <div class="brand">
-      <a href="https://webdevtrick.com/"><img src="https://webdevtrick.com/wp-content/uploads/logo-fb-1.png"></a>
     </div>
     <nav>
       <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -436,7 +435,7 @@ li1 {
                             <a href="/web">Web Development Projects</a>
                         </li>
                         <li>
-                            <a href="#">Proteus projects</a>
+                            <a href="/proteus">Proteus projects</a>
                         </li>
                     </ul>
                 </li>
@@ -474,6 +473,11 @@ new WOW().init();
 </script>
 <div class="container-fluid bg-">
 <br><br><br>
+    <div class="container-fluid">
+        <h1>Web Development projects</h1>
+        <p>See my works below. I built them from scratch using Django framework</p>
+    </div>
+    <br>
 <div class="row">
     <div class="col-md-4">
       <div class="thumbnail">
@@ -498,7 +502,7 @@ new WOW().init();
     <div class="col-md-4">
       <div class="thumbnail">
         <a href="/w3images/fjords.jpg" target="_blank">
-          <img src="{% static 'mysite/images/port.jpg' %}" alt="Fjords" style="width:100%">
+          <img src="{% static 'mysite/images/portt.jpg' %}" alt="Fjords" style="width:100%">
           <div class="caption text-muted">
             <p>This portfolio page was made using Python. Pages ware made from scratch using Bootstrap, HTML,
                 CSS and JavaScript and are fully responsive.</p>
@@ -513,13 +517,13 @@ new WOW().init();
 <div class="footer">
         <br>
         <div class="container2 mt-5 text-center">
+            <h1>Get in touch</h1>
+            <p>ukturajo@gmail.com</p>
             <ul1>
-                <li1><a href="https://facebook.com/husnah.auwal.549"><i class="fa fa-facebook"></i></a></li1>
-                <li1><a href="https://instagram.com/husnah_auwal"><i class="fa fa-instagram"></i></a></li1>
-                <li1><a href="https://twitter.com/AuwalHusnah"><i class="fa fa-twitter"></i></a></li1>
-                <li1><a href="https://github.com/in/husna-auwal-6a32a31ab"><i class="fa fa-github"></i></a></li1>
+                <li1><a href="https://linkedin.com/in/usman-turajo-07511419a"><i class="fa fa-linkedin"></i></a></li1>
+                <li1><a href="https://github.com/uthman399"><i class="fa fa-github"></i></a></li1>
             </ul1>
-        </div>
+</div>
         <p>Copyright @ 2020</p>
         <br>
 </div>
