--- a/portfolio/mysite/templates/mysite/index.html
+++ b/portfolio/mysite/templates/mysite/index.html
@@ -348,7 +348,7 @@ li1 {
 <section class="nav-bar">
     <div class="nav-container">
         <div class="brand">
-            <a href="https://webdevtrick.com/"><img src="https://webdevtrick.com/wp-content/uploads/logo-fb-1.png"></a>
+
         </div>
         <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -458,8 +458,8 @@ new WOW().init();
             <h1>Get in touch</h1>
             <p>ukturajo@gmail.com</p>
             <ul1>
-                <li1><a href="https://linkedin.com/AuwalHusnah"><i class="fa fa-linkedin"></i></a></li1>
-                <li1><a href="https://github.com/in/husna-auwal-6a32a31ab"><i class="fa fa-github"></i></a></li1>
+                <li1><a href="https://linkedin.com/in/usman-turajo-07511419a"><i class="fa fa-linkedin"></i></a></li1>
+                <li1><a href="https://github.com/uthman399"><i class="fa fa-github"></i></a></li1>
             </ul1>
 </div>
         <p>Copyright @ 2020</p>
