--- a/portfolio/mysite/templates/mysite/proteus.html
+++ b/portfolio/mysite/templates/mysite/proteus.html
@@ -349,7 +349,6 @@ font-size: 150%;
 <section class="nav-bar">
     <div class="nav-container">
         <div class="brand">
-            <a href="https://webdevtrick.com/"><img src="https://webdevtrick.com/wp-content/uploads/logo-fb-1.png"></a>
         </div>
         <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -475,12 +474,12 @@ new WOW().init();
 <div class="footer">
         <br>
         <div class="container2 mt-5 text-center">
+            <h1>Get in touch</h1>
+            <p>ukturajo@gmail.com</p>
             <ul1>
-                <li1><a href="https://facebook.com/husnah.auwal.549"><i class="fa fa-facebook"></i></a></li1>
-                <li1><a href="https://instagram.com/husnah_auwal"><i class="fa fa-instagram"></i></a></li1>
-                <li1><a href="https://twitter.com/AuwalHusnah"><i class="fa fa-twitter"></i></a></li1>
-                <li1><a href="https://github.com/in/husna-auwal-6a32a31ab"><i class="fa fa-github"></i></a></li1>
+                <li1><a href="https://linkedin.com/in/usman-turajo-07511419a"><i class="fa fa-linkedin"></i></a></li1>
+                <li1><a href="https://github.com/uthman399"><i class="fa fa-github"></i></a></li1>
             </ul1>
-        </div>
+</div>
         <p>Copyright @ 2020</p>
         <br>
