--- a/portfolio/mysite/templates/mysite/resume.html
+++ b/portfolio/mysite/templates/mysite/resume.html
@@ -410,5 +410,5 @@ new WOW().init();
 
 
 <div class="container-fluid bg-light">
-    <iframe src="{% static 'mysite/pdf/remyy.pdf' %}"   width="100%" height="400"></iframe>
+    <iframe src="{% static 'mysite/pdf/remy.pdf' %}"   width="100%" height="400"></iframe>
 </div>
